Each utility has its own version number, date of last change and
some description at the top of its ".c" file. All utilities in the main
directory have their own "man" pages. There is also a sg3_utils man page.

Changelog for released sg3_utils-1.47 [20211110] [svn: r919]
  - sg_rep_zones: add support for REPORT ZONE DOMAINS and
    REPORT REALMS in this utility
  - sg_raw: fix prints of NVMe NVM command names
  - sg_ses: fix Windows problem "No command (cdb) given"
    - fix crash when '-m LEN' < 252
    - guard against smaller '--maxlen=' values
  - sg_logs: additions to Volume statistics lpage [ssc5r05c]
    - additions to Command duration limits statistics log
      page [spc6r06]
  - sg_vpd: fix do_hex type on some recent pages
    - zoned block dev char vpd: add zone alignment mode and
      zone starting LBA granularity [zbc2r11]
  - sg_read_buffer: fix --length= problem
  - sg_dd, sgm_dd, sgp_dd: don't close negative file descriptors
  - sg_dd: srand48_r() and mrand48_r() are GNU libc specific,
    put conditional in so non-reentrant version used otherwise
    - 'iflag=00,ff' places the 32 bit block address (big endian)
      into each block
  - sgp_dd: major rework, fix issue with error being ignored
    - new: --chkaddr which checks for block address in each block
    - add check for stdatomic.h presence in configure.ac
  - sg_xcopy: tweak CSCD identification descriptor
  - sg_get_elem_status: fix issue with '--maxlen=' option
    - add 2 depopulation revocation health attributes [sbc5r01]
  - transport error handling improved. To fix report of a
    BAD_TARGET transport error but the utility still continued.
    - introduce SG_LIB_TRANSPORT_ERROR [35] exit status
  - several utilities: override '--maxlen=LEN' when LEN
    is < 16 (or 4), take default (or 4) instead
  - scripts: 55-scsi-sg3_id.rules remove outdated rule
  - sg_lib: add sg_scsi_status_is_good(),
    sg_scsi_status_is_bad() and sg_get_zone_type_str()