@@ -2,6 +2,11 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
+Changelog for pre-release sg3_utils-1.48 [20211115] [svn: r921]
+  - rev 921 is a bugfix rev on release 1.47 [r919,920]
+  - sg_dd: change uint type to uint32_t
+  - sg_pt_dummy.c: remove problematic include
+
 Changelog for released sg3_utils-1.47 [20211110] [svn: r919]
   - sg_rep_zones: add support for REPORT ZONE DOMAINS and
     REPORT REALMS in this utility
